<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25">
        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_title"
            android:gravity="bottom|center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/cardViewBg"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/home_desc_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_desc"
            android:gravity="top|center"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/cardViewBg"/>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="10dp"
        android:alignmentMode="alignMargins">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardViewBg"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:weightSum="5">

                <ImageButton
                    android:id="@+id/timer_button"
                    android:contentDescription="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_timer"
                    android:layout_margin="5dp"
                    android:background="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/single_timer"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardViewBg"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:weightSum="5">



                <ImageButton
                    android:id="@+id/multitimer_button"
                    android:contentDescription="@null"

                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_multitimers"
                    android:layout_margin="5dp"
                    android:background="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/multi_timer"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardViewBg"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:weightSum="5">

                <ImageButton
                    android:id="@+id/alarm_button"
                    android:contentDescription="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_alarm"
                    android:layout_margin="5dp"
                    android:background="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/alarm"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardViewBg"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:weightSum="5">

                <ImageButton
                    android:id="@+id/stopwatch_button"
                    android:contentDescription="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_stopwatch"
                    android:layout_margin="5dp"
                    android:background="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/stopwatch"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>

</LinearLayout>